@@ -2011,6 +2011,51 @@ argument_list|(
 name|pointer
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|isCompressed
+condition|)
+block|{
+specifier|final
+name|byte
+index|[]
+name|b
+init|=
+operator|new
+name|byte
+index|[
+name|toRead
+index|]
+decl_stmt|;
+name|localFieldsStream
+operator|.
+name|readBytes
+argument_list|(
+name|b
+argument_list|,
+literal|0
+argument_list|,
+name|b
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|fieldsData
+operator|=
+operator|new
+name|String
+argument_list|(
+name|uncompress
+argument_list|(
+name|b
+argument_list|)
+argument_list|,
+literal|"UTF-8"
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 comment|//read in chars b/c we already know the length we need to read
 name|char
 index|[]
@@ -2041,6 +2086,7 @@ argument_list|(
 name|chars
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 catch|catch
 parameter_list|(
