@@ -581,6 +581,15 @@ operator|.
 name|TEXT_FIELD_UTF2_KEY
 argument_list|)
 expr_stmt|;
+name|lazyFieldNames
+operator|.
+name|add
+argument_list|(
+name|DocHelper
+operator|.
+name|COMPRESSED_TEXT_FIELD_2_KEY
+argument_list|)
+expr_stmt|;
 name|SetBasedFieldSelector
 name|fieldSelector
 init|=
@@ -678,6 +687,74 @@ argument_list|(
 name|DocHelper
 operator|.
 name|LAZY_FIELD_TEXT
+argument_list|)
+operator|==
+literal|true
+argument_list|)
+expr_stmt|;
+name|field
+operator|=
+name|doc
+operator|.
+name|getFieldable
+argument_list|(
+name|DocHelper
+operator|.
+name|COMPRESSED_TEXT_FIELD_2_KEY
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"field is null and it shouldn't be"
+argument_list|,
+name|field
+operator|!=
+literal|null
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"field is not lazy and it should be"
+argument_list|,
+name|field
+operator|.
+name|isLazy
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|value
+operator|=
+name|field
+operator|.
+name|stringValue
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"value is null and it shouldn't be"
+argument_list|,
+name|value
+operator|!=
+literal|null
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|value
+operator|+
+literal|" is not equal to "
+operator|+
+name|DocHelper
+operator|.
+name|FIELD_2_COMPRESSED_TEXT
+argument_list|,
+name|value
+operator|.
+name|equals
+argument_list|(
+name|DocHelper
+operator|.
+name|FIELD_2_COMPRESSED_TEXT
 argument_list|)
 operator|==
 literal|true
