@@ -113,6 +113,8 @@ New features
     which allow one to retrieve the size of a field without retrieving the actual field.
     (Chuck Williams via Grant Ingersoll)
 
+15. LUCENE-799: Properly handle lazy, compressed fields.  (Mike Klaas via Grant Ingersoll)
+
 API Changes
 
  1. LUCENE-438: Remove "final" from Token, implement Cloneable, allow
